// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create and remove reaction: Respected 1`] = `
<button
  aria-label="Respected comment by Markus"
  aria-pressed={true}
  className="BaseButton-root Button-base Button-flat Button-active Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorPrimary ReactionButton-reacted CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton CommentContainer-actionButton coral-reactedButton coral-comment-reactedButton ReactionButton-button"
  data-testid="comment-reaction-button"
  data-variant="flat"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  <span
    className="Box-root Flex-root Flex-flex Flex-alignCenter"
  >
    <span
      className="SvgIcon-root SvgIcon-sm ReactionButton-icon SvgIcon-strokeWidthSemiBold SvgIcon-noFill"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.33014 8.42566H0.830139V21.9257H5.33014V8.42566Z"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
        <path
          d="M5.33099 20.421C9.88265 20.421 10.2535 22.2335 16.4162 22.6037C18.1465 22.7076 19.3882 22.7972 20.5406 21.3197C23.0714 18.0748 24.287 10.3581 21.8323 10.3581H16.8181C15.7136 10.3581 14.8181 9.46264 14.8181 8.35807V4.46807C14.8181 1.44807 10.4002 -0.136834 10.4002 3.24807C10.4002 5.67566 9.4752 7.34449 7.92993 8.81464C7.17404 9.53378 6.29025 9.91876 5.33099 10.1244"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    <span
      className="ReactionButton-totalReactions"
    >
      1
    </span>
  </span>
</button>
`;

exports[`create and remove reaction: Unrespected 1`] = `
<button
  aria-label="Respect comment by Markus"
  aria-pressed={false}
  className="BaseButton-root Button-base Button-flat Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimarySemiBold Button-paddingSizeExtraSmall Button-colorSecondary CommentContainer-actionButton coral coral-reactButton coral-comment-reactButton ReactionButton-button"
  data-testid="comment-reaction-button"
  data-variant="flat"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  type="button"
>
  <span
    className="Box-root Flex-root Flex-flex Flex-alignCenter"
  >
    <span
      className="SvgIcon-root SvgIcon-sm ReactionButton-icon SvgIcon-strokeWidthRegular SvgIcon-noFill"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5.33014 8.42566H0.830139V21.9257H5.33014V8.42566Z"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
        <path
          d="M5.33099 20.421C9.88265 20.421 10.2535 22.2335 16.4162 22.6037C18.1465 22.7076 19.3882 22.7972 20.5406 21.3197C23.0714 18.0748 24.287 10.3581 21.8323 10.3581H16.8181C15.7136 10.3581 14.8181 9.46264 14.8181 8.35807V4.46807C14.8181 1.44807 10.4002 -0.136834 10.4002 3.24807C10.4002 5.67566 9.4752 7.34449 7.92993 8.81464C7.17404 9.53378 6.29025 9.91876 5.33099 10.1244"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </span>
</button>
`;
